# codeart-llm-cli

./: .clang-tidy  .gitignore  LICENSE  MODULE.bazel  README.md
docs/: design.md  onboarding.md  plan.md  thoughts.md
src/: BUILD.bazel  agent_manager.cc  agent_manager.h  anthropic.cc  anthropic.h  chat.cc  chat.h  claude_client.cc  claude_client.h  client.cc  client.h  command_parser.cc  command_parser.h  event_loop.cc  event_loop.h  fetch.cc  fetch.h  history.cc  history.h  input.cc  input.h  interactive_cli.cc  interactive_cli.h  json_decode.cc  json_decode.h  json_validator.h  main.cc  main.cpp  message.h  message_router.cc  message_router.h  model.cc  model.h  model_manager.cc  model_manager.h  openai.cc  openai.h  openai_client.cc  openai_client.h  tui.h
src/models/: BUILD.bazel  openai.cc  openai.h
src/processfile/: BUILD.bazel  main.cc
test/: BUILD.bazel  chat.test.cc  event_loop.test.cc  input.test.cc  json_decode.test.cc  json_validator.test.cc
tests/: BUILD.bazel  command_parser.test.cc  history.test.cc  main.test.cpp
