"""
This module defines the codeart_llm_cli package.
"""
module(name = "codeart_llm_cli", version = "0.1")

bazel_dep(name = "abseil-cpp", version = "20250512.0")

bazel_dep(name = "curl", version = "8.8.0.bcr.3")

bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")

bazel_dep(name = "googletest", version = "1.16.0.bcr.1", dev_dependency = True)

bazel_dep(name = "rules_cc", version = "0.1.1")

# Dev dependencies
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "0ae99b7adb025b251962942f6e8a698a5539888b",
)
