load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "uchenchat",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":fetch",
        ":llms",
        ":tui",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "llms",
    srcs = ["claude_client.cc", "openai_client.cc"],
    hdrs = [
        "claude_client.h",
        "openai_client.h",
        "client.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fetch",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "fetch",
    srcs = ["fetch.cc"],
    hdrs = ["fetch.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@curl",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "tui",
    srcs = ["input.cc"],
    hdrs = [
        "input.h",
        "tui.h",
    ],
    deps = ["@abseil-cpp//absl/strings"],
)
