load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "input_test",
    srcs = ["input.test.cc"],
    deps = [
        "//src:tui",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "json_validator_test",
    srcs = ["json_validator.test.cc"],
    deps = [
        "//src:json_validator",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
    ],
)
