load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "openai",
    srcs = ["openai.cc"],
    hdrs = ["openai.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src:core",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@nlohmann_json//:json",
        "@curl",
    ],
)
