load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "processfile",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
